[package]
name = "downloader_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
tokio = { version = "*", features = ["full"] }
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
scraper = "*"
jsonpath = "*"
